tutorial: add TitleCenter Organisms and TitleImgCenterST Templates

--- a/sections/template/TemplateShowcaseSec/template.html
+++ b/sections/template/TemplateShowcaseSec/template.html
@@ -13,4 +13,12 @@
     <TextCenterST />
     <v-divider></v-divider>
   </v-row>
+  <v-row class="py-6">
+    <v-col cols="12" class="text-center">
+      <h2>No.2: TitleImgCenterST</h2>
+      <v-divider></v-divider>
+    </v-col>
+    <v-divider></v-divider>
+    <TitleImgCenterST />
+  </v-row>
 </v-main>
