feat: update PhotoTileA #4'

--- a/sections/template/TemplateShowcaseSec/template.html
+++ b/sections/template/TemplateShowcaseSec/template.html
@@ -13,4 +13,13 @@
     <TextCenterST />
     <v-divider></v-divider>
   </v-row>
+  <v-row class="py-6">
+    <v-col cols="12" class="text-center">
+      <h2>No.1: TileLayoutST</h2>
+      <v-divider></v-divider>
+    </v-col>
+    <v-divider></v-divider>
+    <TileLayoutST />
+    <v-divider></v-divider>
+  </v-row>
 </v-main>
