upload unmodified files

--- a/sections/template/TemplateShowcaseSec/template.html
+++ b/sections/template/TemplateShowcaseSec/template.html
@@ -19,6 +19,6 @@
       <v-divider></v-divider>
     </v-col>
     <v-divider></v-divider>
-    <TitleImgCenterST />
+    <SampleLayoutST />
   </v-row>
 </v-main>
