--- a/sections/template/TemplateShowcaseSec/template.html
+++ b/sections/template/TemplateShowcaseSec/template.html
@@ -11,11 +11,10 @@
     </v-col>
     <v-divider></v-divider>
     <TextCenterST />
-    <v-divider></v-divider>
   </v-row>
   <v-row class="py-6">
     <v-col cols="12" class="text-center">
-      <h2>No.2: TitleImgCenterST</h2>
+      <h2>No.2: SampleLayoutST</h2>
       <v-divider></v-divider>
     </v-col>
     <v-divider></v-divider>
