--- a/sections/template/TemplateShowcaseSec/template.html
+++ b/sections/template/TemplateShowcaseSec/template.html
@@ -9,20 +9,17 @@
       <h2>No.0: TextCenterST</h2>
     </v-col>
     <TextCenterST />
-  </v-row>
-  <v-row class="py-6">
-    <v-col cols="12" class="text-center">
-      <h2>No.2: SampleLayoutST</h2>
+    <v-col>
       <v-divider></v-divider>
     </v-col>
-    <v-divider></v-divider>
-    <SampleLayoutST />
   </v-row>
   <v-row class="py-6">
     <v-col cols="12" class="text-center">
       <h2>No.1: TileLayoutST</h2>
     </v-col>
     <TileLayoutST />
-    <v-divider></v-divider>
+    <v-col>
+      <v-divider></v-divider>
+    </v-col>
   </v-row>
 </v-main>
