fix: set cols=12 #4

--- a/sections/template/TemplateShowcaseSec/template.html
+++ b/sections/template/TemplateShowcaseSec/template.html
@@ -9,7 +9,7 @@
       <h2>No.0: TextCenterST</h2>
     </v-col>
     <TextCenterST />
-    <v-col>
+    <v-col cols="12">
       <v-divider></v-divider>
     </v-col>
   </v-row>
@@ -18,7 +18,7 @@
       <h2>No.1: TileLayoutST</h2>
     </v-col>
     <TileLayoutST />
-    <v-col>
+    <v-col cols="12">
       <v-divider></v-divider>
     </v-col>
   </v-row>
