feat-02: renamed components #2

--- a/sections/template/TemplateShowcaseSec/template.html
+++ b/sections/template/TemplateShowcaseSec/template.html
@@ -22,4 +22,13 @@
       <v-divider></v-divider>
     </v-col>
   </v-row>
+  <v-row class="py-6">
+    <v-col cols="12" class="text-center">
+      <h2>No.2: TitleImgLayoutST</h2>
+    </v-col>
+    <TitleImgLayoutST />
+    <v-col cols="12">
+      <v-divider></v-divider>
+    </v-col>
+  </v-row>
 </v-main>
