--- a/sections/template/TemplateShowcaseSec/template.html
+++ b/sections/template/TemplateShowcaseSec/template.html
@@ -31,4 +31,13 @@
       <v-divider></v-divider>
     </v-col>
   </v-row>
+  <v-row class="py-6">
+    <v-col cols="12" class="text-center">
+      <h2>No.8: IntorAST</h2>
+    </v-col>
+    <IntroAST />
+    <v-col cols="12">
+      <v-divider></v-divider>
+    </v-col>
+  </v-row>
 </v-main>
