--- a/components/templates/TitleImgLayoutST/template.html
+++ b/components/templates/TitleImgLayoutST/template.html
@@ -1,10 +1,12 @@
-<v-container>
-  <v-row justify="center" class="my-8" no-gutters>
-    <v-col cols="12" sm="11">
-      <div class="mb-8">
-        <TitleCenter />
-      </div>
-      <v-img :src="imgSrc" class="rounded-lg" />
-    </v-col>
-  </v-row>
-</v-container>
+<section class="gnt-sec-2">
+  <v-container>
+    <v-row justify="center" class="my-8" no-gutters>
+      <v-col cols="12" sm="11">
+        <div class="mb-8">
+          <TitleCenter />
+        </div>
+        <v-img :src="imgSrc" class="rounded-lg" />
+      </v-col>
+    </v-row>
+  </v-container>
+</section>
