--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,4 +1,3 @@
-@import '~vuetify/src/styles/styles.sass';
+@import '../gonuxt/styles/app.scss';
 @import 'variables';
-@import 'base';
-@import 'gonuxt';
+@import 'custom';
