--- a/sections/template/TemplateShowcaseSec/template.html
+++ b/sections/template/TemplateShowcaseSec/template.html
@@ -1,4 +1,5 @@
 <v-main>
+  <ScrollTopBtn />
   <section class="gnt-sec-2">
     <v-row>
       <v-col cols="12" class="text-center font-weight-bold">
@@ -24,7 +25,7 @@
     </v-row>
   </section>
   <v-divider></v-divider>
-  <section class="gnt-sec-2">
+  <section class="gnt-sec-2">z
     <v-row>
       <v-col cols="12" class="text-center">
         <h2>No.2: TitleImgLayoutST</h2>
