resize button and changed default color

--- a/sections/template/TemplateShowcaseSec/template.html
+++ b/sections/template/TemplateShowcaseSec/template.html
@@ -25,7 +25,7 @@
     </v-row>
   </section>
   <v-divider></v-divider>
-  <section class="gnt-sec-2">z
+  <section class="gnt-sec-2">
     <v-row>
       <v-col cols="12" class="text-center">
         <h2>No.2: TitleImgLayoutST</h2>
