--- a/sections/template/TemplateShowcaseSec/template.html
+++ b/sections/template/TemplateShowcaseSec/template.html
@@ -37,6 +37,15 @@
   <section class="gnt-sec-2">
     <v-row>
       <v-col cols="12" class="text-center">
+        <h2>No.7: ImageLinkLayoutST</h2>
+      </v-col>
+      <ImageLinkLayoutST />
+    </v-row>
+  </section>
+  <v-divider></v-divider>
+  <section class="gnt-sec-2">
+    <v-row>
+      <v-col cols="12" class="text-center">
         <h2>No.8: IntorAST</h2>
       </v-col>
       <IntroAST />
