add title and script

--- a/components/templates/MemberListLayoutST/template.html
+++ b/components/templates/MemberListLayoutST/template.html
@@ -1,40 +1,25 @@
 <v-container>
-  <v-row class="my-8">
-    <v-col cols="12" sm="6" md="4">
-      <div class="mb-8">
-        <MemberCard 
-        :imgSrc="require('@/assets/img/gonuxt/sample01.jpg')"/>
-      </div>
+  <v-row>
+    <v-col cols="12">
+      <h2 style="text-align: center">（タイトル）</h2>
+      <p style="text-align: center">（サブタイトル）</p>
     </v-col>
-    <v-col cols="12" sm="6" md="4">
-      <div class="mb-8">
-        <MemberCard 
-        :imgSrc="require('@/assets/img/gonuxt/sample02.jpg')"/>
-      </div>
-    </v-col>
-    <v-col cols="12" sm="6" md="4">
-      <div class="mb-8">
-        <MemberCard 
-        :imgSrc="require('@/assets/img/gonuxt/sample03.jpg')"/>
-      </div>
-    </v-col>
-    <v-col cols="12" sm="6" md="4">
-      <div class="mb-8">
-        <MemberCard 
-        :imgSrc="require('@/assets/img/gonuxt/sample01.jpg')"/>
-      </div>
-    </v-col>
-    <v-col cols="12" sm="6" md="4">
-      <div class="mb-8">
-        <MemberCard 
-        :imgSrc="require('@/assets/img/gonuxt/sample02.jpg')"/>
-      </div>
-    </v-col>
-    <v-col cols="12" sm="6" md="4">
-      <div class="mb-8">
-        <MemberCard 
-        :imgSrc="require('@/assets/img/gonuxt/sample02.jpg')"/>
-      </div>
+  </v-row>
+  <v-row class="d-flex justify-left align-center">
+    <v-col
+      cols="12"
+      sm="6"
+      md="4"
+      class="pa-md-5 gonuxt-tile"
+      v-for="tile in tiles"
+      :key="tile.txtBody"
+    >
+      <MemberCard
+        :imgSrc="tile.imgSrc"
+        :txtBody="tile.title"
+        :name="tile.titleSize"
+        :job="tile.txtPosition"
+      />
     </v-col>
   </v-row>
 </v-container>
