--- a/components/templates/SimpleCardListST/template.html
+++ b/components/templates/SimpleCardListST/template.html
@@ -1,5 +1,5 @@
 <v-container>
-  <v-row justify="center" class="my-8" no-gutters>
+  <v-row justify="space-around" class="my-8">
     <v-col cols="12" sm="6" md="4">
       <div class="mb-8">
         <SimpleCard
