--- a/components/templates/AutoSwitchTitle/template.html
+++ b/components/templates/AutoSwitchTitle/template.html
@@ -8,9 +8,14 @@
     <div class="slide-element">
       <p class="mb-2">Subtitle</p>
       <h1 class="mb-5">Title</h1>
-      <h2>(Text)<br>  fjniap vaeip vnaien vnaipe jniap vaeip vnaien vnaipe</h2>
+      <h2>
+        (Text)<br />
+        fjniap vaeip vnaien vnaipe jniap vaeip vnaien vnaipe
+      </h2>
     </div>
 
-    <ScrollDownBtn btnTxt="btnTxt"/>
+    <p class="scroll js-scroll">
+      <a href="#" v-on:click.stop.prevent="openWindow">btnTxt</a>
+    </p>
   </div>
 </div>
