--- a/components/templates/AutoSwitchTitle/style.scss
+++ b/components/templates/AutoSwitchTitle/style.scss
@@ -4,28 +4,28 @@
   position: relative;
   overflow: hidden;
   width: 100vw;
-  height: calc(100vh - 64px);
+  height: calc(80vh - 64px);
   display: flex;
 }
 
 .slider-inner {
   position: absolute;
   width: 100vw;
-  height: calc(100vh - 64px);
+  height: calc(80vh - 64px);
 }
 
 .slide-img {
   width: 100vw;
-  height: calc(100vh - 64px);
+  height: calc(80vh - 64px);
   object-fit: cover;
 }
 
 .fade-enter-active {
-  transition: all 5s ease;
+  transition: all 4s ease;
 }
 
 .fade-leave-active {
-  transition: all 5s ease;
+  transition: all 4s ease;
   position: absolute;
 }
 
@@ -50,17 +50,62 @@
 }
 
 .slide-element h1 {
-  font-size: 6vmax;
+  font-size: 5vmax;
   font-weight: bold;
   letter-spacing: 0.15em;
 }
 
 .slide-element h2 {
-  font-size: 2.5vmax;
+  font-size: 2vmax;
   font-weight: bold;
   letter-spacing: 0.15em;
 }
 
 .slide-element p {
   font-size: 2vmax;
+}
+
+.scroll {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  text-align: center;
+  letter-spacing: 0.15em;
+  text-shadow: 1px 0 1px black;
+  a {
+    position: relative;
+    display: inline-block;
+    font-size: 1.5vmax;
+    font-weight: bold;
+    color: white;
+    text-decoration: none;
+    padding: 0 0 50px;
+    opacity: 0.8;
+    &:before {
+      content: '';
+      position: absolute;
+      width: 15px;
+      height: 15px;
+      left: 0;
+      right: 0;
+      bottom: 25px;
+      margin: auto;
+      border-bottom: 4px solid white;
+      border-right: 4px solid white;
+      transform: rotate(45deg);
+      animation: move 2s infinite;
+    }
+  }
+}
+
+@keyframes move {
+  0% {
+    transform: rotate(45deg) translate(0, 0);
+  }
+  20% {
+    transform: rotate(45deg) translate(8px, 8px);
+  }
+  40% {
+    transform: rotate(45deg) translate(0, 0);
+  }
 }
