--- a/components/templates/AutoSwitchTitle/style.scss
+++ b/components/templates/AutoSwitchTitle/style.scss
@@ -72,6 +72,7 @@
   text-align: center;
   letter-spacing: 0.15em;
   text-shadow: 1px 0 1px black;
+  margin-bottom: 5px;
   a {
     position: relative;
     display: inline-block;
