--- a/components/templates/MemberListLayoutST/template.html
+++ b/components/templates/MemberListLayoutST/template.html
@@ -16,9 +16,10 @@
     >
       <MemberCard
         :imgSrc="member.imgSrc"
-        :txtBody="member.title"
-        :name="member.titleSize"
-        :job="member.txtPosition"
+        :txtBody="member.txtBody"
+        :name="member.name"
+        :job="member.job"
+        :bgcolor="member.bgcolor"
         imgSize="5"
       />
     </v-col>
