adjust padding and attach section class

--- a/components/templates/AccessA/template.html
+++ b/components/templates/AccessA/template.html
@@ -1,11 +1,11 @@
-<section>
+<section class="gnt-sec-2">
   <v-container fluid>
-    <u><h1>ACCESS</h1></u>
+    <u><h1 class="pb-8 text-center">ACCESS</h1></u>
     <v-row >
       <v-col cols="12" sm="6">
         <iframe :src="mapURL"  width="100%" :height="mapHeight" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </v-col>
-      <v-col cols="12" sm="6"> 
+      <v-col cols="12" sm="6" class="pt-8 pl-8">
         <h2>交通アクセス</h2>
         <p>阪急電車千里線「北千里駅」下車。東へ徒歩 約15分</p>
         <h2>活動日</h2>
