deleted methods and renamed templates

--- a/components/templates/MemberListLayoutST/template.html
+++ b/components/templates/MemberListLayoutST/template.html
@@ -20,7 +20,7 @@
         :name="member.name"
         :job="member.job"
         :bgcolor="member.bgcolor"
-        imgSize="5"
+        imgSize="5rem"
       />
     </v-col>
   </v-row>
