--- a/components/templates/AccessA/template.html
+++ b/components/templates/AccessA/template.html
@@ -1,5 +1,5 @@
 <section class="gnt-sec-2">
-  <v-container fluid>
+  <v-container>
     <u><h1 class="pb-8 text-center">ACCESS</h1></u>
     <v-row >
       <v-col cols="12" sm="6">
