modified default text

--- a/components/templates/ListB/style.scss
+++ b/components/templates/ListB/style.scss
@@ -3,6 +3,7 @@
   display: inline-block;
   vertical-align: middle;
   text-align: center;
-  margin: 0 40px;
+  margin: 0 60px;
   width: 20vmax;
+  max-width: 200px;
 }
