--- a/components/templates/ListB/template.html
+++ b/components/templates/ListB/template.html
@@ -1,5 +1,5 @@
 <section class="gnt-sec-3">
-  <div>
+  <v-container>
     <h2 class="mb-8 text-center">年間行事</h2>
     <v-timeline :dense="$vuetify.breakpoint.smAndDown">
       <v-timeline-item
@@ -26,5 +26,5 @@
         </v-card>
       </v-timeline-item>
     </v-timeline>
-  </div>
+  </v-container>
 </section>
