--- a/components/templates/scheduleA/template.html
+++ b/components/templates/scheduleA/template.html
@@ -1,5 +1,6 @@
 <section class="gnt-sec-3">
-  <u><h1 class="pb-8 text-center">schedule A</h1></u>
+  <u><h1 class="text-center">schedule A</h1></u>
+  <v-container>
   <v-row justify="center" class="my-8">
     <v-col cols="12" sm="6">
       <div class="mb-8">
@@ -22,4 +23,5 @@
       </div>
     </v-col>
   </v-row>
+  </v-container>
 </section>
