--- a/components/templates/LigincMemberListST/template.html
+++ b/components/templates/LigincMemberListST/template.html
@@ -1,13 +1,10 @@
 <v-container>
-    <v-row justify="center" class="my-8" no-gutters>
-      <v-col cols="12" sm="11">
-        <div class="mb-8">
-          <LigincCard />
-          <LigincCard />
-          <LigincCard />
-          <LigincCard />
-          <LigincCard />
-        </div>
-      </v-col>
+    <v-row class="my-8" no-gutters>
+      <LigincCard name="阪大 太郎" txt="開発担当" :imgSrc="require('@/assets/gonuxt/img/sample02.jpg')" txt2="初めまして，休日は本を読んだり，散歩をしたりしています．" :imgSrc2="require('@/assets/gonuxt/img/sample01.jpg')"/>
+      <LigincCard/>
+      <LigincCard/>
+      <LigincCard/>
+      <LigincCard/>
+      <LigincCard/>
     </v-row>
-  </v-container>
+</v-container>
