--- a/components/templates/MemberListBLayoutST/template.html
+++ b/components/templates/MemberListBLayoutST/template.html
@@ -1,10 +1,10 @@
 <v-container>
     <v-row class="my-8" no-gutters>
-      <LigincCard name="阪大 太郎" txt="開発担当" :imgSrc="require('@/assets/gonuxt/img/sample02.jpg')" txt2="初めまして，休日は本を読んだり，散歩をしたりしています．" :imgSrc2="require('@/assets/gonuxt/img/sample01.jpg')"/>
-      <LigincCard/>
-      <LigincCard/>
-      <LigincCard/>
-      <LigincCard/>
-      <LigincCard/>
+      <MemberCardB name="阪大 太郎" txt="開発担当" :imgSrc="require('@/assets/gonuxt/img/sample02.jpg')" txt2="初めまして，休日は本を読んだり，散歩をしたりしています．" :imgSrc2="require('@/assets/gonuxt/img/sample01.jpg')"/>
+      <MemberCardB/>
+      <MemberCardB/>
+      <MemberCardB/>
+      <MemberCardB/>
+      <MemberCardB/>
     </v-row>
 </v-container>
