--- a/components/templates/scheduleA/template.html
+++ b/components/templates/scheduleA/template.html
@@ -5,6 +5,7 @@
     <v-col cols="12" sm="6">
       <div class="mb-8">
         <CalendarA />
+        <small class="mt-3" color="dark-gray">最終更新: 2022年3月15日</small>
       </div>
     </v-col>
     <v-col cols="12" sm="6">
