--- a/components/templates/ListA/template.html
+++ b/components/templates/ListA/template.html
@@ -1,5 +1,5 @@
 <section class="gnt-sec-3 d-flex justify-center">
-  <div>
+  <div class="hidden-sm-and-down">
     <h3 class="mb-4">イベント概要</h3>
     
     <v-data-table
@@ -8,6 +8,7 @@
       class="elevation-2"
       :footer-props="{ 'items-per-page-text' : '行/ページ:' }"
       :items-per-page="itemsPerPage"
+      mobile-breakpoint="0"
     >
       <template v-slot:item.name="{ item }">
         <v-chip :color="getColor(item.name)" dark>
