fix: remove json data and update data property

--- a/components/templates/scheduleA/template.html
+++ b/components/templates/scheduleA/template.html
@@ -1,28 +1,28 @@
 <section class="gnt-sec-3">
   <u><h1 class="text-center">schedule A</h1></u>
   <v-container>
-  <v-row justify="center" class="my-8">
-    <v-col cols="12" sm="6">
-      <div class="mb-8">
-        <CalendarA />
-        <small class="mt-3" color="dark-gray">最終更新: 2022年3月15日</small>
-      </div>
-    </v-col>
-    <v-col cols="12" sm="6">
-      <div class="my-8 mx-8">
-        <h2 class="font-weight-bold d-block">Title - schedule A</h2>
-        <p class="d-block">
-          (text) <br>
-          Pellentesque habitant morbi tristique senectus et netus et malesuada
-          fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae,
-        </p>
-        <p class="d-block">
-          ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam
-          egestas semper. Aenean ultricies mi vitae est. Mauris placerat
-          eleifend leo.
-        </p>
-      </div>
-    </v-col>
-  </v-row>
+    <v-row justify="center" class="my-8">
+      <v-col cols="12" sm="6">
+        <div class="mb-8">
+          <CalendarA :events="events" />
+          <small class="mt-3" color="dark-gray">最終更新: 2022年3月15日</small>
+        </div>
+      </v-col>
+      <v-col cols="12" sm="6">
+        <div class="my-8 mx-8">
+          <h2 class="font-weight-bold d-block">Title - schedule A</h2>
+          <p class="d-block">
+            (text) <br />
+            Pellentesque habitant morbi tristique senectus et netus et malesuada
+            fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae,
+          </p>
+          <p class="d-block">
+            ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam
+            egestas semper. Aenean ultricies mi vitae est. Mauris placerat
+            eleifend leo.
+          </p>
+        </div>
+      </v-col>
+    </v-row>
   </v-container>
 </section>
