add parameter name to default text

--- a/components/templates/SimpleCardListST/template.html
+++ b/components/templates/SimpleCardListST/template.html
@@ -3,9 +3,9 @@
     <v-col cols="12" sm="6" md="4">
       <div class="mb-8">
         <SimpleCard
-          title="活動場所"
-          mainText="用途"
-          subText="情報"
+          title="(title) 活動場所"
+          mainText="(mainText) 用途"
+          subText="(subText) 情報"
           :imgSrc="require('@/assets/gonuxt/img/sample01.jpg')"
         />
       </div>
@@ -13,9 +13,9 @@
     <v-col cols="12" sm="6" md="4">
       <div class="mb-8">
         <SimpleCard
-          title="第一コート"
-          mainText="試合"
-          subText="対大阪大学"
+          title="(title) 第一コート"
+          mainText="(mainText) 試合"
+          subText="(subText) 対大阪大学"
           :imgSrc="require('@/assets/gonuxt/img/sample02.jpg')"
         />
       </div>
@@ -23,9 +23,9 @@
     <v-col cols="12" sm="6" md="4">
       <div class="mb-8">
         <SimpleCard
-          title="第二コート"
-          mainText="試合"
-          subText="対京都大学"
+          title="(title) 第二コート"
+          mainText="(mainText) 試合"
+          subText="(subText) 対京都大学"
           :imgSrc="require('@/assets/gonuxt/img/sample02.jpg')"
         />
       </div>
@@ -33,9 +33,9 @@
     <v-col cols="12" sm="6" md="4">
       <div class="mb-8">
         <SimpleCard
-          title="第三コート"
-          mainText="試合"
-          subText="対東京大学"
+          title="(title) 第三コート"
+          mainText="(mainText) 試合"
+          subText="(subText) 対東京大学"
           :imgSrc="require('@/assets/gonuxt/img/sample02.jpg')"
         />
       </div>
@@ -43,9 +43,9 @@
     <v-col cols="12" sm="6" md="4">
       <div class="mb-8">
         <SimpleCard
-          title="グラウンドA"
-          mainText="練習"
-          subText="平日"
+          title="(title) グラウンドA"
+          mainText="(mainText) 練習"
+          subText="(subText) 平日"
           :imgSrc="require('@/assets/gonuxt/img/sample03.jpg')"
         />
       </div>
@@ -53,9 +53,9 @@
     <v-col cols="12" sm="6" md="4">
       <div class="mb-8">
         <SimpleCard
-          title="グラウンドB"
-          mainText="練習"
-          subText="休日"
+          title="(title) グラウンドB"
+          mainText="(mainText) 練習"
+          subText="(subText) 休日"
           :imgSrc="require('@/assets/gonuxt/img/sample03.jpg')"
         />
       </div>
