feat: update padding around images

--- a/components/templates/TextImgST/template.html
+++ b/components/templates/TextImgST/template.html
@@ -1,17 +1,17 @@
 <section class="gnt-sec-2">
   <v-container class="txt-img-box">
     <v-row class="d-flex align-stretch">
-      <v-col cols="12" sm="6">
+      <v-col cols="12" sm="6" class="img-box">
         <v-img :src="imgSrc" />
       </v-col>
-      <v-col cols="12" sm="6" class="d-flex align-center">
+      <v-col cols="12" sm="6" class="d-flex txt-box">
         <div class="d-block">
           <h2 class="font-weight-bold d-block">TextImgST - Title</h2>
           <p class="d-block">
             Pellentesque habitant morbi tristique senectus et netus et malesuada
             fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae,
           </p>
-          <div class="d-block">
+          <div class="d-block mt-5">
             <v-btn
               dark
               outlined
