--- a/components/templates/ImageLinkLayoutST/template.html
+++ b/components/templates/ImageLinkLayoutST/template.html
@@ -1,18 +1,15 @@
 <section class="gnt-sec-2">
-  <v-container fluid>
-    <section class="gnt-sec-3">
-      <v-row class="d-flex justify-left align-center gont-tile-layout-template">
-        <v-col
-          cols="12"
-          sm="6"
-          md="4"
-          class="pa-md-5"
-          v-for="card in Cards2Col"
-          :key="card.title"
-        >
-          <ImageLinkCard :imgSrc="card.imgSrc" :title="card.title"
-        /></v-col>
-      </v-row>
-    </section>
+  <v-container>
+    <v-row class="d-flex justify-left align-center px-3 px-sm-0">
+      <v-col
+        cols="12"
+        sm="6"
+        md="4"
+        v-for="card in Cards2Col"
+        :key="card.title"
+      >
+        <ImageLinkCard :imgSrc="card.imgSrc" :title="card.title"
+      /></v-col>
+    </v-row>
   </v-container>
 </section>
