fix: set padding to TileLayoutST

--- a/components/templates/TileLayoutST/template.html
+++ b/components/templates/TileLayoutST/template.html
@@ -1,4 +1,4 @@
-<section class="gnt-sec-2">
+<section class="gnt-sec-2 col">
   <v-container fluid>
     <v-row class="d-flex justify-center align-center gont-tile-layout-template">
       <v-col cols="12">
@@ -21,9 +21,7 @@
         />
       </v-col>
     </v-row>
-    <v-row
-      class="d-flex justify-center align-center gnt-sec-2 gont-tile-layout-template"
-    >
+    <v-row class="d-flex justify-center align-center gont-tile-layout-template">
       <v-col cols="12">
         <h3>SM = single column, MD=4 columns</h3>
       </v-col>
