--- a/components/templates/CardListLayoutST/template.html
+++ b/components/templates/CardListLayoutST/template.html
@@ -1,6 +1,6 @@
 <section class="gnt-sec-2">
   <section class="gnt-sec-3 black white--text">
-    <v-container class="justify-content-center">
+    <v-container>
     <h1 class="my-10" style ="text-align: center; font-weight:500">CONTACT US</h1>
     <v-row class="d-flex justify-content-center">
       <v-col
