fix: change duplicated index key

--- a/components/templates/MemberListLayoutST/template.html
+++ b/components/templates/MemberListLayoutST/template.html
@@ -12,7 +12,7 @@
       md="4"
       class="pa-md-5 gonuxt-tile"
       v-for="member in members"
-      :key="member.txtBody"
+      :key="member.name"
     >
       <MemberCard
         :imgSrc="member.imgSrc"
