--- a/components/templates/ListA/template.html
+++ b/components/templates/ListA/template.html
@@ -17,7 +17,7 @@
   <div class="hidden-md-and-up">
     <v-expansion-panels multiple>
       <h3 class="mb-4">イベント概要</h3>
-      <v-expansion-panel v-for="schedule in schedules" :key="schedule.name">
+      <v-expansion-panel v-for="schedule, index in schedules" :key="index">
         <v-expansion-panel-header>
           <v-row>
             <v-col cols="3" class="px-4"> {{ schedule.name }} </v-col>
