--- a/components/templates/MessageLayoutB/template.html
+++ b/components/templates/MessageLayoutB/template.html
@@ -47,7 +47,7 @@
               {{ modalTitle }}
             </v-card-title>
 
-            <v-card-text> {{ modalText }} </v-card-text>
+            <v-card-text class="pt-3"> {{ modalText }} </v-card-text>
           </v-card>
         </v-dialog>
       </v-col>
