--- a/components/templates/QuestionsLayoutST/template.html
+++ b/components/templates/QuestionsLayoutST/template.html
@@ -1,6 +1,6 @@
 <section class="gnt-sec-2">
   <v-container>
-    <v-row class="justify-left align-center">
+    <v-row class="justify-left align-center px-3 px-sm-0">
       <v-col
         cols="12"
         sm="6"
