--- a/components/templates/TafContact/style.scss
+++ b/components/templates/TafContact/style.scss
@@ -1,20 +1,26 @@
 @import '@/assets/styles/app';
 
-.flame1 {
+$breakPoint: 1000px;
+
+.flame0 {
   width: 97%;
   height: 250px;
   background-color: rgb(226, 225, 225);
   margin: 0 auto;
+  @media only screen and (max-width: $breakPoint) {
+    height: 500px;
+  }
 }
-.flame3 {
+.flame1 {
   text-align: center;
   height: 50px;
   padding-top: 10px;
+  @media only screen and (max-width: $breakPoint) {
+    text-align: center;
+    height: 50px;
+    padding-top: 10px;
+  }
 }
-.flame4 {
-  padding-left: 50px;
-  padding-top: 20px;
-}
-.flame0 {
+.flame2 {
   margin-top: -20px;
 }
